# reportly

./: .gitignore  README.md  REPORTING.md  pyproject.toml
reportly/: __init__.py  build.py  cli.py  config.py  core.py  lint.py  scaffold.py
tests/: test_reportly.py
